--- a/MiniAlgoBox.vbproj
+++ b/MiniAlgoBox.vbproj
@@ -73,9 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="MainForm.vb" />
     <Compile Include="MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
       <SubType>Form</SubType>
